# TodoApp-Kiro

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  PRE_COMMIT_SETUP.md  README.md  config.json  pyproject.toml  task8_implementation_plan.md
.claude/: settings.json
.github/workflows/: ci.yml
.kiro/specs/python-todo-app/: design.md  requirements.md  tasks.md
.kiro/steering/: branching-strategy.md  domain-driven-design.md  test-driven-development.md  uv-package-management.md
docs/: branching-strategy.md  domain-driven-design.md  test-driven-development.md
docs/PRD/: design.md  requirements.md  tasks.md
src/: __init__.py  main.py
src/application/dto/: __init__.py
src/application/services/: todo_factory.py  todo_service.py
src/config/: repository_factory.py  settings.py
src/domain/: __init__.py  exceptions.py  models.py
src/domain/models/: __init__.py
src/domain/services/: __init__.py
src/infrastructure/persistence/: file_utils.py  json_repository.py  repository.py  xml_repository.py
src/interface/cli/: console_helpers.py  todo_cli.py
tests/: conftest.py  test_main.py
tests/application/: test_todo_factory.py  test_todo_service.py
tests/application/factories/: __init__.py
tests/application/services/: __init__.py
tests/config/: test_repository_factory.py  test_settings.py
tests/domain/: __init__.py  test_exceptions.py  test_models.py  test_models_edge_cases.py  test_property_based_validation.py
tests/fixtures/: test_cleanup.py  test_data.py
tests/infrastructure/: test_file_utils.py  test_json_repository.py  test_repository_interface.py  test_xml_repository.py
tests/integration/: conftest.py  test_cross_layer_integration.py  test_end_to_end_scenarios.py  test_storage_backend_integration.py
tests/interface/cli/: __init__.py  conftest.py  test_console_helpers.py  test_todo_cli.py  test_todo_cli_integration.py
